--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-native",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Checks if the given value is a native function.",
   "main": "index.js",
   "scripts": {
@@ -28,12 +28,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bubkoo/is-native.git"
+    "url": "git+https://github.com/gearcase/is-native.git"
   },
   "bugs": {
-    "url": "https://github.com/bubkoo/is-native/issues"
+    "url": "https://github.com/gearcase/is-native/issues"
   },
-  "homepage": "https://github.com/bubkoo/is-native#readme",
+  "homepage": "https://github.com/gearcase/is-native#readme",
   "devDependencies": {
     "jshint": "^2.9.1",
     "chai": "^3.5.0",
